--- a/문제들/썸머윈터 인턴쉽 코테 준비.md
+++ b/문제들/썸머윈터 인턴쉽 코테 준비.md
@@ -1,40 +1,3 @@
-```java
-class Solution {
-    int[][] board =  new int[11][11];
-    boolean[][][][] ch = new boolean[11][11][11][11];
-    int dx[] = {-1,1,0,0};
-    int dy[] = {0,0,-1,1};
-    
-    public int solution(String dirs) {
-        int answer = 0;
-        int N = dirs.length();
-        int x = 5, y = 5;
-        for(int i=0; i<N; i++){
-            char dir = dirs.charAt(i);
-            int nx = x, ny = y;
-            if(dir == 'U'){
-                nx = x + dx[0];
-                ny = y + dy[0];
-            }else if(dir == 'D'){
-                nx = x + dx[1];
-                ny = y + dy[1];  
-            }else if(dir == 'R'){
-                nx = x + dx[3];
-                ny = y + dy[3];
-            }else if(dir == 'L'){
-                nx = x + dx[2];
-                ny = y + dy[2];
-            }
-            if(nx < 0 || ny <0 || ny>10 || nx>10) continue;
-            if(!ch[x][y][nx][ny]) answer++;
-            ch[x][y][nx][ny] = true;
-            x = nx; y=ny;
-        }
-        return answer;
-    }
-}
-```
-
 # 썸머윈터 인턴쉽 코테 준비
 
 
@@ -67,6 +30,62 @@ class Solution {
         return answer;
     }
     ```
+
+
+
+- 66.6점
+
+  ```java
+  class Solution {
+      
+      long gcd(int a, int b){
+          if(a < b){
+              int tmp = a;
+              a = b;
+              b = tmp;
+          }
+          if(b==0) return a;
+          else return gcd(b, a%b);
+      }
+      public long solution(int w, int h) {
+          long answer = 1;
+          long gcdVal = gcd(w,h);
+          long val = w+h - gcdVal;
+          answer = (w*h) - val;
+          return answer;
+      }
+  }
+  ```
+
+- 100점
+
+  ```java
+  class Solution {
+      
+      long gcd(long a, long b){
+          if(a < b){
+              long tmp = a;
+              a = b;
+              b = tmp;
+          }
+          if(b==0) return a;
+          else return gcd(b, a%b);
+      }
+      public long solution(int w, int h) {
+          long answer = 1;
+          long weight = (long)w;
+          long height = (long)h;
+          long gcdVal = gcd(weight,height);
+          long val = weight+height - gcdVal;
+          answer = (weight*height) - val;
+          return answer;
+      }
+  }
+  ```
+
+캐스팅 문제였다.
+
+
 
 
 
@@ -118,6 +137,8 @@ class Solution {
   ```
 
 [[프로그래머스\] 스킬 트리](https://greenapple16.tistory.com/73)
+
+
 
 
 
@@ -365,3 +386,118 @@ class Solution {
       return ans;
   }
   ```
+
+
+
+
+
+## 종이접기
+
+[코딩테스트 연습 - 종이접기](https://programmers.co.kr/learn/courses/30/lessons/62049?language=java)
+
+자바로 다시 풀었다 : 규칙 찾는 문제
+
+자바 진짜.. 생소해서 그런지 시간 오래걸림
+
+```java
+import java.util.*;
+```
+
+잊지말자
+
+
+
+- 100
+
+  ```java
+  import java.util.*;
+  
+  class Solution {
+      public int[] solution(int n) {
+          int[] answer = {};
+          Vector<Integer> v = new Vector<Integer>();
+          v.add(0);
+          for(int i=1; i<n; i++){
+              Vector<Integer> tmp = new Vector<Integer>();
+              int val = 0;
+              for(int j=0; j<v.size(); j++){
+                  tmp.add(val);
+                  if(val == 1){
+                      val = 0;
+                  }else{
+                      val = 1;
+                  }
+                  tmp.add(v.get(j));
+              }
+              tmp.add(val);
+              v.clear();
+              for(int j=0; j<tmp.size(); j++){
+                  v.add(tmp.get(j));
+              }
+          }
+          answer = new int[v.size()];
+          for(int i=0; i<v.size(); i++){
+              answer[i] = v.get(i).intValue();
+          }
+          return answer;
+      }
+  }
+  ```
+
+
+
+
+
+## 지형 이동
+
+[코딩테스트 연습 - 지형 이동](https://programmers.co.kr/learn/courses/30/lessons/62050)
+
+- 잘못생각함
+
+  ```java
+  import java.util.*;
+  import java.awt.*;
+  
+  class Solution {
+      int[] dx = {-1,1,0,0};
+      int[] dy = {0,0,-1,1};
+      int result = 987654321;
+      
+      public void bfs(int startX, int startY, int[][] land, int height){
+          boolean[][] ch = new boolean[301][301];
+          Queue<Point> q = new LinkedList<Point>();
+          q.offer(new Point(startX, startY));
+          ch[startX][startY] = true;
+          int N = land.length;
+          int ans = 0;
+          
+          while(!q.isEmpty()){
+              int x = q.peek().x;
+              int y = q.peek().y;
+              q.poll();
+              for(int i=0; i<4; i++){
+                  int nx = x+dx[i];
+                  int ny = y+dy[i];
+                  if(nx<0 || ny<0 || nx>=N || ny>=N || ch[nx][ny]) continue;
+                  ch[nx][ny] = true;
+                  q.offer(new Point(nx,ny));
+                  if(Math.abs(land[x][y]-land[nx][ny]) > height){
+                      ans += Math.abs(land[x][y]-land[nx][ny]);
+                      height = Math.abs(land[x][y]-land[nx][ny]);
+                  }
+              }
+          }
+          result = Math.min(result,ans);
+      }
+      public int solution(int[][] land, int height) {
+          
+          for(int i=0; i<land.length; i++){
+              for(int j=0; j<land[i].length; j++){
+                  bfs(i,j,land,height);
+              }
+          }
+          return result;
+      }
+  }
+  ```
+
