--- a/문제들/자바 코테 연습.md
+++ b/문제들/자바 코테 연습.md
@@ -98,3 +98,103 @@
     ```
 
 vector와 hashset을 이용함
+
+
+
+## 쇠막대기
+
+스택 이용해서 )일때 레이저니깐 stack에 담긴 ( 사이즈를 더해준다 그 전에 ( 면 +1
+
+
+
+
+
+## 다리를 지나는 트럭
+
+[코딩테스트 연습 - 다리를 지나는 트럭](https://programmers.co.kr/learn/courses/30/lessons/42583)
+
+- 14점ㅋㅋㅋ
+
+  ```java
+  import java.util.*;
+  
+  class Solution {
+      public int solution(int bridge_length, int weight, int[] truck_weights) {
+          int answer = 0;
+          Stack<Integer> s = new Stack<>();
+          for(int i=0; i<truck_weights.length; i++){
+              int index = i;
+              int sum=0;
+              while(index<truck_weights.length){
+                  if(s.isEmpty()){
+                      s.push(truck_weights[index]);
+                      sum += truck_weights[index];
+                  }else{
+                      if(sum + truck_weights[index]<= weight){
+                          s.push(truck_weights[index]);
+                          i = index;
+                      }else{
+                          break;
+                      }
+                  }
+                  index++;
+              }
+              answer += bridge_length;
+              while(!s.isEmpty()){
+                  s.pop();
+              }
+          }
+          answer += truck_weights.length;
+          return answer;
+      }
+  }
+  ```
+
+- 100점
+
+  ```java
+  import java.util.*;
+  
+  class Solution {
+      class Truck{
+          int weight;
+          int entry;
+          
+          Truck(int weight, int entry){
+              this.weight = weight;
+              this.entry = entry;
+          }
+      }
+      
+      public int solution(int bridge_length, int weight, int[] truck_weights) {
+          int answer = 0;
+          Queue<Truck> b = new LinkedList<>();
+          Queue<Truck> w = new LinkedList<>();
+          int N = truck_weights.length;
+          for(int i=0; i<N; i++){
+              w.offer(new Truck(truck_weights[i],0));
+          }
+          int total = 0;
+          while(!w.isEmpty() || !b.isEmpty()){
+              answer++;
+              if(!b.isEmpty()){
+                  Truck t = b.peek();
+                  if(answer - t.entry >= bridge_length){
+                      b.poll();
+                      total -= t.weight;
+                  }
+              }
+              if(!w.isEmpty()){
+                  Truck t = w.peek();
+                  if(t.weight + total <= weight){
+                      b.offer(new Truck(t.weight, answer));
+                      total += t.weight;
+                      w.poll();
+                  }
+              }
+          }
+          return answer;
+      }
+  }
+  ```
+
