--- a/문제들/백준 골드 문제.md
+++ b/문제들/백준 골드 문제.md
@@ -132,3 +132,266 @@
     	return 0;
     }
     ```
+
+
+
+
+
+## LCS
+
+[9251번: LCS](https://www.acmicpc.net/problem/9251)
+
+인프런에서 배운 알고리즘 중 하나 LIS와 같은 문자열 알고리즘이다.
+
+최장 문자열 연속 수열ㄹ로 중간에 문자열 있고없고 연속된 문자열이면 된다.
+
+DP문제.
+
+[[백준\] 9251번 C/C++ 풀이 _ LCS](http://melonicedlatte.com/algorithm/2018/03/15/181550.html)
+
+- 정답 소스
+
+  ```cpp
+  #include <iostream>
+  #include <string>
+  #include <vector>
+  #include <queue>
+  #include <algorithm>
+  
+  using namespace std;
+  
+  int dp[1001][1001];
+  
+  int main() {
+  	ios_base::sync_with_stdio(false);
+  	cin.tie(NULL);
+  	string str1, str2;
+  	cin >> str1 >> str2;
+  	int N = str1.size();
+  	int N2 = str2.size();
+  	for (int i = 0,j=0; i <=N,j<=N2; i++,j++) {
+  		dp[i][0] = 0;
+  		dp[0][j] = 0;
+  	}
+  	for (int i = 1; i <= N; i++) {
+  		for (int j = 1; j <= N2; j++) {
+  			if (str1[i-1] == str2[j-1]) {
+  				dp[i][j] = dp[i - 1][j - 1] + 1;
+  			}
+  			else {
+  				dp[i][j] = max(dp[i - 1][j], dp[i][j - 1]);
+  			}
+  		}
+  	}
+  	cout << dp[N][N2] << "\\n";
+  	return 0;
+  }
+  ```
+
+## 적록색약
+
+[10026번: 적록색약](https://www.acmicpc.net/problem/10026)
+
+dfs로 풀었는데 답이 1,0 이렇게나옴.. 씁
+
+- 오답
+
+  ```cpp
+  #include <iostream>
+  #include <string>
+  #include <vector>
+  #include <queue>
+  #include <algorithm>
+  
+  using namespace std;
+  
+  char map[101][101];
+  bool check[101][101];
+  int dir[4][2] = { {-1,0},{1,0},{0,-1}, {0,1} };
+  int nomal=0, unNomal = 0;
+  int N;
+  
+  void dfs(int red, int blue, int green, int x,int y) {
+  	if (red == 2 && blue == 1 && green == 1) {
+  		nomal++;
+  		red = 0, blue = 0, green = 0;
+  		return;
+  	}
+  	if ((red == 2 || green == 2) && blue == 1) {
+  		unNomal++;
+  		red = 0, blue = 0, green = 0;
+  		return;
+  	}
+  
+  	for (int i = 0; i < 4; i++) {
+  		int nx = x + dir[i][0];
+  		int ny = y + dir[i][1];
+  		if (nx<0 || ny<0 || ny>N || nx>N || check[nx][ny]) continue;
+  		check[nx][ny] = true;
+  		if (map[nx][ny] == 'R') red++;
+  		else if (map[nx][ny] == 'B') blue++;
+  		else if(map[nx][ny] == 'G') green++;
+  		dfs(red, blue, green, nx, ny);
+  		map[nx][ny] = false;
+  	}
+  }
+  
+  int main() {
+  	ios_base::sync_with_stdio(false);
+  	cin.tie(NULL);
+  	
+  	cin >> N;
+  	for (int i = 0; i < N; i++) {
+  		getchar();
+  		for (int j = 0; j < N; j++) {
+  			scanf("%1c", &map[i][j]);
+  		}
+  	}
+  	int red = 0, blue = 0, green = 0;
+  	if (map[0][0] == 'R') red++;
+  	else if (map[0][0] == 'B') blue++;
+  	else if (map[0][0] == 'G') green++;
+  	dfs(red, blue, green, 0, 0);
+  	cout << unNomal << " " << nomal << "\\n";
+  
+  	return 0;
+  }
+  ```
+
+
+
+- 오답? 이유는 몰겠다
+
+  ```cpp
+  #include <iostream>
+  #include <string>
+  #include <vector>
+  #include <queue>
+  #include <algorithm>
+  #include <cstring>
+  
+  using namespace std;
+  
+  char map[101][101];
+  bool check[101][101];
+  int dir[4][2] = { {-1,0},{1,0},{0,-1}, {0,1} };
+  int nomal=0, unNomal = 0;
+  int N;
+  
+  void bfs(int startX, int startY) {
+  	queue<pair<int, int>> q;
+  	q.push({ startX, startY });
+  	check[startX][startY] = true;
+  	while (!q.empty()) {
+  		int x = q.front().first;
+  		int y = q.front().second;
+  		q.pop();
+  		for (int i = 0; i < 4; i++) {
+  			int nx = x + dir[i][0];
+  			int ny = y + dir[i][1];
+  			if (nx < 0 || ny < 0 || nx >= N || ny >= N || check[nx][ny] || map[x][y] != map[nx][ny]) continue;
+  			check[nx][ny] = true;
+  			q.push({ nx,ny });
+  		}
+  	}
+  }
+  int main() {
+  	ios_base::sync_with_stdio(false);
+  	cin.tie(NULL);
+  	
+  	cin >> N;
+  	for (int i = 0; i < N; i++) {
+  		getchar();
+  		for (int j = 0; j < N; j++) {
+  			scanf("%1c", &map[i][j]);
+  		}
+  	}
+  	
+  	for (int i = 0; i < N; i++) {
+  		for (int j = 0; j < N; j++) {
+  			if (check[i][j]) continue;
+  			nomal++;
+  			bfs(i, j);
+  		}
+  	}
+  	memset(check, false, sizeof(check));
+  	for (int i = 0; i < N; i++) {
+  		for (int j = 0; j < N; j++) {
+  			if (map[i][j] == 'R') map[i][j] = 'G';
+  		}
+  	}
+  	for (int i = 0; i < N; i++) {
+  		for (int j = 0; j < N; j++) {
+  			if (check[i][j]) continue;
+  			unNomal++;
+  			bfs(i, j);
+  		}
+  	}
+  	cout << nomal << " " << unNomal;
+  	return 0;
+  }
+  ```
+
+는 scanf를 cin으로 바꾸니깐 맞았다 뜸
+
+내가 비쥬얼스튜디오로 했을때 cin은 오히려 string으로 들어가서 안됐는데? getchar()로 해결도 잘했고.. 아 아마 그때.. ㅋㅋㅋ map[i][j] = true 이 코드여서 안됐나보다
+
+
+
+
+
+## 집합의 표현
+
+[1717번: 집합의 표현](https://www.acmicpc.net/problem/1717)
+
+Union & Find 이용하면 되는 거 같다.
+
+해서 했는데 시간 초과! 그래서 알고보니 메모제이션도 써야했다ㅋㅋㅋ ㅇ이건 외워야할듯 이해는 했는데 올만에 하니깐 기억안나서 결국 과거에 한 걸 봤었음..ㅋㅋㅋ
+
+- 정답 소스
+
+  ```cpp
+  #include <iostream>
+  #include <string>
+  #include <vector>
+  #include <queue>
+  #include <algorithm>
+  #include <cstring>
+  
+  using namespace std;
+  
+  int arr[1000001];
+  
+  int Find(int v) {
+  	if (v == arr[v]) return v;
+  	else return arr[v]= Find(arr[v]);
+  }
+  
+  void Union(int a, int b) {
+  	a = Find(a);
+  	b = Find(b);
+  	if (a != b) arr[a] = b;
+  }
+  
+  int main() {
+  	ios_base::sync_with_stdio(false);
+  	cin.tie(NULL);
+  	int n, m;
+  	cin >> n >> m;
+  	for (int i = 0; i <= n; i++) {
+  		arr[i] = i;
+  	}
+  	for (int i = 0; i < m; i++) {
+  		int a, b, c;
+  		cin >> a >> b >> c;
+  		if (a == 0) {
+  			Union(b, c);
+  		}
+  		else {
+  			if (Find(b) != Find(c)) cout << "NO\\n";
+  			else cout << "YES\\n";
+  		}
+  	}
+  	return 0;
+  }
+  ```
