--- a/문제들/백준 골드 문제.md
+++ b/문제들/백준 골드 문제.md
@@ -395,3 +395,226 @@ Union & Find 이용하면 되는 거 같다.
   	return 0;
   }
   ```
+
+
+
+## 별 찍기 - 11
+
+[2448번 - 별 찍기 - 11](https://www.acmicpc.net/problem/2448)
+
+일단 N개 줄을 두고 N개 빈칸을 두고 별을 시작한다.
+
+3 x 2 ^ k 승이랬으니깐 k가 3인게 또 힌트일 거라 생각했다.
+
+그래서 다양하게 생각하는데 규칙이 떠오르지 않는다 흠
+
+고민하다 결국 정답 소스를 확인했다
+
+[[백준 2448\] 별 찍기-11](https://ssu-gongdoli.tistory.com/79)
+
+무슨 말인지 알겠는데 이거 다시 풀어봐야할듯!
+
+
+
+## 줄 세우기
+
+[2252번: 줄 세우기](https://www.acmicpc.net/problem/2252)
+
+뭐지 이거 ㅋㅋㅋㅋ 어떻게 구현해야하나 하다가 unordered_set 이용했는데 역시나 `틀렸습니다` 뜬다. 예제는 다 나옴
+
+- 오답
+- 오답 - 3초 남기고
+
+**위상정렬** 이란다!
+
+[백준 알고리즘 2252 - 줄 세우기](https://m.blog.naver.com/PostView.nhn?blogId=zlzlzb&logNo=221192525884&proxyReferer=https:%2F%2Fwww.google.com%2F)
+
+- 정답
+
+  ```cpp
+  #include <iostream>
+  #include <string>
+  #include <vector>
+  #include <queue>
+  #include <algorithm>
+  #include <cstring>
+  #include <unordered_set>
+  #include <stack>
+  
+  using namespace std;
+  
+  int main() {
+  	ios_base::sync_with_stdio(false);
+  	cin.tie(NULL);
+  	int n, m;
+  	cin >> n >> m;
+  	vector<int> cnt(n + 1,0);
+  	vector<int> v[32001];
+  	queue<int> q;
+  	for (int i = 0; i < m; i++) {
+  		int a, b;
+  		cin >> a >> b;
+  		cnt[b]++;
+  		v[a].push_back(b);
+  	}
+  	for (int i = 1; i <= n; i++) {
+  		if (cnt[i] == 0) q.push(i);
+  	}
+  	while (!q.empty()) {
+  		int x = q.front();
+  		q.pop();
+  		cout << x << " ";
+  		for (int i = 0; i < v[x].size(); i++) {
+  			cnt[v[x][i]]--;
+  			if (cnt[v[x][i]] == 0) q.push(v[x][i]);
+  		}
+  	}
+  	return 0;
+  }
+  ```
+
+
+
+
+
+## 벽 부수고 이동하기
+
+[2206번: 벽 부수고 이동하기](https://www.acmicpc.net/problem/2206)
+
+- 시간 초과
+
+  ```cpp
+  #include <iostream>
+  #include <string>
+  #include <vector>
+  #include <queue>
+  #include <algorithm>
+  #include <cstring>
+  
+  using namespace std;
+  
+  int map[1001][1001];
+  int n, m;
+  int ans = 987654321;
+  int dir[4][2] = { {-1,0}, {1,0}, {0,-1}, {0,1} };
+  int dy[1001][1001];
+  bool ch[1001][1001];
+  
+  void bfs(int wallX, int wallY) {
+  	queue<pair<int, int>> q;
+  	if (map[0][0] == 0) {
+  		q.push({ 0,0 });
+  		ch[0][0] = true;
+  	}
+  	while (!q.empty()) {
+  		int x = q.front().first;
+  		int y = q.front().second;
+  		q.pop();
+  		for (int i = 0; i < 4; i++) {
+  			int nx = x + dir[i][0];
+  			int ny = y + dir[i][1];
+  			if (nx < 0 || ny < 0 || nx >= n || ny >= m || ch[nx][ny] || map[nx][ny] == 1) continue;
+  			ch[nx][ny] = true;
+  			if (dy[nx][ny] == 0) dy[nx][ny] = dy[x][y] + 1;
+  			else dy[nx][ny] = min(dy[nx][ny], dy[x][y] + 1);
+  			q.push({ nx,ny });
+  		}
+  	}
+  	if (dy[n - 1][m - 1] != 0) ans = min(ans, dy[n - 1][m - 1]);
+  }
+  
+  int main() {
+  	ios_base::sync_with_stdio(false);
+  	cin.tie(NULL);
+  	vector<pair<int, int>> wall;
+  	cin >> n >> m;
+  	for (int i = 0; i < n; i++) {
+  		for (int j = 0; j < m; j++) {
+  			scanf("%1d", &map[i][j]);
+  			if (map[i][j] == 1) wall.push_back({ i,j });
+  		}
+  	}
+  	
+  	for (int i = 0; i < wall.size(); i++) {
+  		memset(&dy[0][0], 0, sizeof(dy));
+  		memset(&ch[0][0], false, sizeof(ch));
+  		int x = wall[i].first;
+  		int y = wall[i].second;
+  		map[x][y] = 0;
+  		bfs(x,y);
+  		map[x][y] = 1;
+  	}
+  
+  	ans = ans == 987654321 ? -1 : ans+1;
+  	cout << ans << "\\n";
+  
+  	return 0;
+  }
+  ```
+
+
+
+첨에 scanf("%1d", &map[i][j]); 로 했는데 저번에도 그렇고 scanf 1d, 1c 요런식으로는 안되는 거 같음.. 그래서 cin로 char로 했더니 통과하네 대체 뭔 차이인지 거참~~
+
+- 정답 소스
+
+  ```cpp
+  #include <iostream>
+  #include <string>
+  #include <vector>
+  #include <queue>
+  #include <algorithm>
+  #include <cstring>
+  
+  using namespace std;
+  
+  char map[1001][1001];
+  int n, m;
+  int dir[4][2] = { {-1,0}, {1,0}, {0,-1}, {0,1} };
+  int dy[1001][1001][2];
+  
+  int bfs() {
+  	queue<pair<pair<int, int>,int>> q;
+  	q.push({ { 0,0 },0 });
+  	dy[0][0][0] = 1;
+  
+  	while (!q.empty()) {
+  		int x = q.front().first.first;
+  		int y = q.front().first.second;
+  		int flag = q.front().second;
+  		q.pop();
+  		if (x == n - 1 && y == m - 1) return dy[x][y][flag];
+  
+  		for (int i = 0; i < 4; i++) {
+  			int nx = x + dir[i][0];
+  			int ny = y + dir[i][1];
+  			if (nx < 0 || ny < 0 || nx >= n || ny >= m || dy[nx][ny][flag]) continue;
+  			
+  			if (map[nx][ny] == '0') {
+  				dy[nx][ny][flag] = dy[x][y][flag] + 1;
+  				q.push({ {nx,ny}, flag});
+  			}
+  			else if (map[nx][ny] == '1' && flag == 0) {
+  				dy[nx][ny][1] = dy[x][y][flag] + 1;
+  				q.push({ {nx,ny},1 });
+  			}
+  			
+  		}
+  	}
+  	return -1;
+  }
+  
+  int main() {
+  	ios_base::sync_with_stdio(false);
+  	cin.tie(NULL);
+  	cin >> n >> m;
+  	for (int i = 0; i < n; i++) {
+  		cin >> map[i];
+  	}
+  	
+  	cout << bfs() << "\\n";
+  
+  	return 0;
+  }
+  ```
+
