--- a/문제들/백준 골드 문제.md
+++ b/문제들/백준 골드 문제.md
@@ -618,3 +618,390 @@ Union & Find 이용하면 되는 거 같다.
   }
   ```
 
+## 네트워크 연결
+
+[1922번: 네트워크 연결](https://www.acmicpc.net/problem/1922)
+
+- 오답 소스
+
+  ```cpp
+  #include <iostream>
+  #include <string>
+  #include <vector>
+  #include <queue>
+  #include <algorithm>
+  #include <cstring>
+  
+  using namespace std;
+  
+  vector<pair<int, int>> comp[1001];
+  
+  int bfs(int from) {
+  	priority_queue<pair<int,int>, vector<pair<int,int>>, greater<pair<int,int>>> pq;
+  	for (int i = 0; i < comp[from].size(); i++) {
+  		pq.push({ comp[from][i].second, comp[from][i].first });
+  	}
+  	int cost = 0;
+  	while (!pq.empty()) {
+  		cost = pq.top().first;
+  		int next = pq.top().second;
+  		pq.pop();
+  		break;
+  	}
+  	return cost;
+  }
+  
+  int main() {
+  	ios_base::sync_with_stdio(false);
+  	cin.tie(NULL);
+  	int N, M,ans=0;
+  	cin >> N >> M;
+  	
+  	for (int i = 0; i < M; i++) {
+  		int a, b, c;
+  		cin >> a >> b >> c;
+  		comp[a].push_back({ b,c });
+  	}
+  	for(int i=1; i<=N; i++){
+  		ans += bfs(i);
+  	}
+  	cout << ans << "\\n";
+  	return 0;
+  }
+  ```
+
+아 밑에 예제 풀이?만 보고 오해해서 이상하게 짰음ㅋㅋㅋ
+
+- 크루스칼 이용 (정답)
+
+  ```cpp
+  #include <iostream>
+  #include <string>
+  #include <vector>
+  #include <queue>
+  #include <algorithm>
+  #include <cstring>
+  
+  using namespace std;
+  
+  struct Data {
+  	int v, e, m;
+  	Data(int ve, int end, int money) {
+  		v = ve;
+  		e = end;
+  		m = money;
+  	}
+  	bool operator<(Data &d) {
+  		return m < d.m;
+  	}
+  };
+  
+  int arr[1001];
+  vector<Data> comp;
+  int res;
+  
+  int Find(int v) {
+  	if (v == arr[v]) return v;
+  	else return arr[v] = Find(arr[v]);
+  }
+  
+  void Union(int a, int b, int c) {
+  	a = Find(a);
+  	b = Find(b);
+  	if (a != b) {
+  		arr[a] = b;
+  		res += c;
+  	}
+  }
+  
+  int main() {
+  	ios_base::sync_with_stdio(false);
+  	cin.tie(NULL);
+  	int N, M,ans=0;
+  	cin >> N >> M;
+  	for (int i = 1; i <= N; i++) {
+  		arr[i] = i;
+  	}
+  	for (int i = 0; i < M; i++) {
+  		int a, b, c;
+  		cin >> a >> b >> c;
+  		comp.push_back(Data(a, b,c ));
+  	}
+  	sort(comp.begin(), comp.end());
+  	for (int i = 0; i < comp.size(); i++) {
+  		Union(comp[i].v, comp[i].e, comp[i].m);
+  	}
+  	cout << res << "\\n";
+  	return 0;
+  }
+  ```
+
+
+
+## 최소 스패닝 트리
+
+[1197번: 최소 스패닝 트리](https://www.acmicpc.net/problem/1197)
+
+- 프림 이용했다(정답)
+
+  ```cpp
+  #include <iostream>
+  #include <string>
+  #include <vector>
+  #include <queue>
+  #include <algorithm>
+  #include <cstring>
+  
+  using namespace std;
+  
+  struct Data {
+  	int edge, cost;
+  
+  	Data(int e, int c) {
+  		edge = e;
+  		cost = c;
+  	}
+  	bool operator<(const Data &d)const{
+  		return cost > d.cost;
+  	}
+  };
+  
+  vector<Data> arr[10001];
+  bool ch[10001];
+  
+  int main() {
+  	ios_base::sync_with_stdio(false);
+  	cin.tie(NULL);
+  	int N, M,ans=0;
+  	cin >> N >> M;
+  	priority_queue<Data> pq;
+  	for (int i = 0; i < M; i++) {
+  		int x, y, z;
+  		cin >> x >> y >> z;
+  		arr[x].push_back({ y,z });
+  		arr[y].push_back({ x,z });
+  	}
+  	pq.push({ 1,0 });
+  	while (!pq.empty()) {
+  		int v = pq.top().edge;
+  		int c = pq.top().cost;
+  		pq.pop();
+  		if (ch[v]) continue;
+  		ch[v] = true;
+  		ans += c;
+  		for (int i = 0; i < arr[v].size(); i++) {
+  			pq.push(Data(arr[v][i].edge, arr[v][i].cost));
+  		}
+  	}
+  	cout << ans << "\\n";
+  	return 0;
+  }
+  ```
+
+
+
+
+
+## 최소 비용 구하기
+
+[1916번: 최소비용 구하기](https://www.acmicpc.net/problem/1916)
+
+- 프림 이용 (오답)
+
+  ```cpp
+  #include <iostream>
+  #include <string>
+  #include <vector>
+  #include <queue>
+  #include <algorithm>
+  #include <cstring>
+  
+  using namespace std;
+  
+  struct Data {
+  	int edge, cost;
+  
+  	Data(int e, int c) {
+  		edge = e;
+  		cost = c;
+  	}
+  	bool operator<(const Data &d)const{
+  		return cost > d.cost;
+  	}
+  };
+  
+  vector<Data> arr[1001];
+  bool ch[1001];
+  
+  int main() {
+  	ios_base::sync_with_stdio(false);
+  	cin.tie(NULL);
+  	int N, M,ans=0;
+  	cin >> N >> M;
+  	priority_queue<Data> pq;
+  	for (int i = 0; i < M; i++) {
+  		int x, y, z;
+  		cin >> x >> y >> z;
+  		arr[x].push_back({ y,z });
+  	}
+  	int A, B;
+  	cin >> A >> B;
+  	pq.push({ A,0 });
+  	while (!pq.empty()) {
+  		int v = pq.top().edge;
+  		int c = pq.top().cost;
+  		pq.pop();
+  		if (!pq.empty()) {
+  			while (!pq.empty()) pq.pop();
+  		}
+  		if (ch[v]) continue;
+  		ch[v] = true;
+  		ans += c;
+  		if (v == B) break;
+  		for (int i = 0; i < arr[v].size(); i++) {
+  			pq.push(Data(arr[v][i].edge, arr[v][i].cost));
+  		}
+  	}
+  	cout << ans << "\\n";
+  	return 0;
+  }
+  ```
+
+
+
+- 메모리 초과
+
+  ```cpp
+  #include <iostream>
+  #include <string>
+  #include <vector>
+  #include <queue>
+  #include <algorithm>
+  #include <cstring>
+  
+  using namespace std;
+  
+  struct Data {
+  	int node, cost;
+  
+  	Data(int e, int c) {
+  		node = e;
+  		cost = c;
+  	}
+  	bool operator<(const Data &d)const{
+  		return cost > d.cost;
+  	}
+  };
+  
+  vector<Data> arr[1001];
+  bool ch[1001];
+  int ans=987654321;
+  
+  void dfs(int from, int to, int cost) {
+  	if (from == to) {
+  		ans = min(cost, ans);
+  		return;
+  	}
+  	for (int i = 0; i < arr[from].size(); i++) {
+  		int next = arr[from][i].node;
+  		dfs(next, to, arr[from][i].cost + cost);
+  	}
+  }
+  
+  int main() {
+  	ios_base::sync_with_stdio(false);
+  	cin.tie(NULL);
+  	int N, M;
+  	cin >> N >> M;
+  	
+  	for (int i = 0; i < M; i++) {
+  		int x, y, z;
+  		cin >> x >> y >> z;
+  		arr[x].push_back({ y,z });
+  	}
+  	int A, B;
+  	cin >> A >> B;
+  	for (int i = 1; i <= N; i++) {
+  		sort(arr[i].begin(), arr[i].end());
+  	}
+  	dfs(A, B,0);
+  	cout << ans << "\\n";
+  	return 0;
+  }
+  ```
+
+
+
+
+
+- 답은 다익스트라(정답)
+
+  ```cpp
+  #include <iostream>
+  #include <string>
+  #include <vector>
+  #include <queue>
+  #include <algorithm>
+  #include <cstring>
+  
+  using namespace std;
+  
+  struct Data {
+  	int node, cost;
+  
+  	Data(int e, int c) {
+  		node = e;
+  		cost = c;
+  	}
+  	bool operator<(const Data &d)const{
+  		return cost > d.cost;
+  	}
+  };
+  
+  vector<Data> arr[1001];
+  bool ch[1001];
+  
+  int bfs(int from, int to, int n) {
+  	vector<int> dist(n+1, 987654321);
+  	dist[from] = 0;
+  	priority_queue<Data> pq;
+  	pq.push({ from,0 });
+  	while (!pq.empty()) {
+  		int next = pq.top().node;
+  		int cost = pq.top().cost;
+  		pq.pop();
+  		if (dist[next] < cost) continue;
+  		
+  		for (int i = 0; i < arr[next].size(); i++) {
+  			int to = arr[next][i].node;
+  			int nextCost = cost + arr[next][i].cost;
+  			if (dist[to] > nextCost) {
+  				dist[to] = nextCost;
+  				pq.push(Data(to, nextCost));
+  			}
+  		}
+  	}
+  	return dist[to];
+  }
+  
+  int main() {
+  	ios_base::sync_with_stdio(false);
+  	cin.tie(NULL);
+  	int N, M;
+  	cin >> N >> M;
+  	
+  	for (int i = 0; i < M; i++) {
+  		int x, y, z;
+  		cin >> x >> y >> z;
+  		arr[x].push_back({ y,z });
+  	}
+  	int A, B;
+  	cin >> A >> B;
+  	for (int i = 1; i <= N; i++) {
+  		sort(arr[i].begin(), arr[i].end());
+  	}
+  	
+  	cout << bfs(A, B, N) << "\\n";
+  	return 0;
+  }
+  ```
