--- a/문제들/백준 골드 문제.md
+++ b/문제들/백준 골드 문제.md
@@ -1005,3 +1005,204 @@ Union & Find 이용하면 되는 거 같다.
   	return 0;
   }
   ```
+
+
+
+## 탈출
+
+[3055번: 탈출](https://www.acmicpc.net/problem/3055)
+
+- 시간 초과
+
+  물론 예제들은 다 돌아감 근데 시간 초과 지렸다
+
+  ```cpp
+  #include <iostream>
+  #include <string>
+  #include <vector>
+  #include <queue>
+  #include <algorithm>
+  #include <cstring>
+  
+  using namespace std;
+  
+  int R, C;
+  char map[51][51];
+  bool check[51][51];
+  int dir[4][2] = { {-1,0}, {1,0}, {0,-1}, {0,1} };
+  
+  void spreadWater() {
+  	queue<pair<int, int>> q;
+  	for (int i = 0; i < R; i++) {
+  		for (int j = 0; j < C; j++) {
+  			if (map[i][j] == '*') q.push({ i,j });
+  		}
+  	}
+  
+  	while (!q.empty()) {
+  		int x = q.front().first;
+  		int y = q.front().second;
+  		q.pop();
+  		for (int i = 0; i < 4; i++) {
+  			int nx = x + dir[i][0];
+  			int ny = y + dir[i][1];
+  			if (nx < 0 || ny < 0 || nx >= R || ny >= C || map[nx][ny] == 'X') continue;
+  			if (map[nx][ny] == '.') map[nx][ny] = '*';
+  		}
+  	}
+  }
+  
+  int ans = 987654321;
+  
+  void copyarray(char a[][51], char b[][51]) {
+  	for (int i = 0; i < R; i++) {
+  		for (int j = 0; j < C; j++) {
+  			a[i][j] = b[i][j];
+  		}
+  	}
+  }
+  
+  void dfs(int x, int y, int cnt) {
+  	if (map[x][y] == 'D') {
+  		if (ans > cnt) ans = cnt;
+  		return;
+  	}
+  	char co[51][51] = { ' ' };
+  	copyarray(co, map);
+  	spreadWater();
+  	for (int i = 0; i < 4; i++) {
+  		int nx = x + dir[i][0];
+  		int ny = y + dir[i][1];
+  		if (nx < 0 || ny < 0 || nx >= R || ny >= C || map[nx][ny] == '*' || map[nx][ny] =='X' || check[nx][ny]) continue;
+  		check[nx][ny] = true;
+  		dfs(nx, ny, cnt + 1);
+  		check[nx][ny] = false;
+  	}
+  	copyarray(map, co);
+  }
+  
+  int main() {
+  	ios_base::sync_with_stdio(false);
+  	cin.tie(NULL);
+  	cin >> R >> C;
+  	int x, y;
+  	for (int i = 0; i < R; i++) {
+  		for (int j = 0; j < C; j++) {
+  			cin >> map[i][j];
+  			if (map[i][j] == 'S') {
+  				x = i;
+  				y = j;
+  			}
+  		}
+  	}
+  	dfs(x, y, 0);
+  	if (ans == 987654321) {
+  		cout << "KAKTUS\\n";
+  	}
+  	else cout << ans << "\\n";
+  
+  	return 0;
+  }
+  ```
+
+[백준 3055 탈출](https://velog.io/@skyepodium/백준-3055-탈출)
+
+이런 방법이 있구나.. 되게 똑똑하네 ㅡ,.ㅡ 난 고작.. 일일히 하는 식으로.. 했는데 씁..
+
+- 정답 소스
+
+  첨에 참고만 하고 나혼자 하다가 계속 안되서 결국 코드를 봄
+
+  근데 이게 계속 KAKTUS가 안나온게 내가 초반 *를 1이라 두고해서 항상 cnt[x][y]+1보다 컸던거임 그래서 답이 나왔던거! 이거만 고치니깐 통과
+
+  ```cpp
+  #include <iostream>
+  #include <string>
+  #include <vector>
+  #include <queue>
+  #include <algorithm>
+  #include <cstring>
+  
+  using namespace std;
+  
+  int R, C;
+  char map[51][51];
+  int cnt[51][51];
+  int water_days[51][51];
+  int dir[4][2] = { {-1,0}, {1,0}, {0,-1}, {0,1} };
+  
+  void spreadWater() {
+  	queue<pair<int, int>> q;
+  	for (int i = 0; i < R; i++) {
+  		for (int j = 0; j < C; j++) {
+  			if (map[i][j] == '*') {
+  				q.push({ i,j });
+  			}
+  		}
+  	}
+  
+  	while (!q.empty()) {
+  		int x = q.front().first;
+  		int y = q.front().second;
+  		q.pop();
+  		for (int i = 0; i < 4; i++) {
+  			int nx = x + dir[i][0];
+  			int ny = y + dir[i][1];
+  			if (nx < 0 || ny < 0 || nx >= R || ny >= C || map[nx][ny] == 'X' || water_days[nx][ny] >0) continue;
+  			if (map[nx][ny] == '.') {
+  				water_days[nx][ny] = water_days[x][y] + 1;
+  				q.push({ nx,ny });
+  			}
+  		}
+  	}
+  }
+  
+  void bfs(int startX, int startY) {
+  	queue<pair<int, int>> q;
+  	q.push({ startX, startY });
+  	while (!q.empty()) {
+  		int x = q.front().first;
+  		int y = q.front().second;
+  		q.pop();
+  		for (int i = 0; i < 4; i++) {
+  			int nx = x + dir[i][0];
+  			int ny = y + dir[i][1];
+  			if (nx < 0 || ny < 0 || nx >= R || ny >= C || cnt[nx][ny]>0 || map[nx][ny] == 'X' || map[nx][ny] == '*' ) continue;
+  			if (water_days[nx][ny] == 0 || water_days[nx][ny] !=0 && water_days[nx][ny] > cnt[x][y]+1) {
+  				cnt[nx][ny] = cnt[x][y] + 1;
+  				q.push({ nx,ny });
+  			}
+  		}
+  	}
+  }
+  
+  int main() {
+  	ios_base::sync_with_stdio(false);
+  	cin.tie(NULL);
+  	cin >> R >> C;
+  	int x, y;
+  	int ex, ey;
+  	for (int i = 0; i < R; i++) {
+  		for (int j = 0; j < C; j++) {
+  			cin >> map[i][j];
+  			if (map[i][j] == 'S') {
+  				x = i;
+  				y = j;
+  			}
+  			else if (map[i][j] == 'D') {
+  				ex = i;
+  				ey = j;
+  			}
+  		}
+  	}
+  	spreadWater();
+  	
+  	bfs(x, y);
+  	
+  	if (cnt[ex][ey] == 0) {
+  		cout << "KAKTUS";
+  	}
+  	else cout << cnt[ex][ey];
+  	return 0;
+  }
+  ```
