--- a/문제들/백준 골드 문제.md
+++ b/문제들/백준 골드 문제.md
@@ -1206,3 +1206,74 @@ Union & Find 이용하면 되는 거 같다.
   	return 0;
   }
   ```
+
+
+
+## 플로이드
+
+[11404번: 플로이드](https://www.acmicpc.net/problem/11404)
+
+플로이드-와샬 알고리즘 쓰는 문제다 아니 애초부터 문제 이름이 플로이드임ㅋㅋㅋㅋㅋ
+
+그래서 플로이드 쓰는 건 안건데.. 문제만으로는 아마 꽤 고생했을 것 같음...
+
+심지어 알고리즘 배웠음에도 기억 안나서 쳐서 짬
+
+- 정답소스
+
+  ```cpp
+  #include <iostream>
+  #include <string>
+  #include <vector>
+  #include <queue>
+  #include <algorithm>
+  #include <cstring>
+  
+  using namespace std;
+  
+  #define INF 987654321
+  
+  int n, m;
+  int dy[101][101];
+  
+  int main() {
+  	ios_base::sync_with_stdio(false);
+  	cin.tie(NULL);
+  	cin >> n >> m;
+  	for (int i = 0; i < m; i++) {
+  		int a, b, c;
+  		cin >> a >> b >> c;
+  		if(dy[a][b] == 0 )dy[a][b] = c;
+  		else dy[a][b] = min(dy[a][b], c);
+  	}
+  
+  	for (int i = 1; i <= n; i++) {
+  		for (int j = 1; j <= n; j++) {
+  			if (i != j && dy[i][j] == 0) dy[i][j] = INF;
+  		}
+  	}
+  
+  	for (int k = 1; k <= n; k++) {
+  		for (int i = 1; i <= n; i++) {
+  			for (int j = 1; j <= n; j++) {
+  				if (dy[i][k] != INF && dy[k][j] != INF) dy[i][j] = min(dy[i][k] + dy[k][j], dy[i][j]);
+  			}
+  		}
+  	}
+  
+  	for (int i = 1; i <= n; i++) {
+  		for (int j = 1; j <= n; j++) {
+              if(dy[i][j] == INF) dy[i][j] = 0;
+  			cout << dy[i][j] << " ";
+  		}
+  		cout << "\\n";
+  	}
+  
+  	
+  	return 0;
+  }
+  ```
+
+플로이드-워샬을 모든 정점 사이의 최단 거리를 구하는 알고리즘. 조건: 음의사이클이 없어야함 2차원 동적 계획법으로 진행.
+
+i, j사이 모든 경유지를 탐색해서 그 중 최단 경로를 찾아내는 것이다. 문제는? 범위 값이 작을때만 가능
