--- a/문제들/백준 골드 문제.md
+++ b/문제들/백준 골드 문제.md
@@ -1277,3 +1277,138 @@ Union & Find 이용하면 되는 거 같다.
 플로이드-워샬을 모든 정점 사이의 최단 거리를 구하는 알고리즘. 조건: 음의사이클이 없어야함 2차원 동적 계획법으로 진행.
 
 i, j사이 모든 경유지를 탐색해서 그 중 최단 경로를 찾아내는 것이다. 문제는? 범위 값이 작을때만 가능
+
+
+
+## 욕샘쟁이 판다
+
+[1937번: 욕심쟁이 판다](https://www.acmicpc.net/problem/1937)
+
+- 시간 초과
+
+  ```cpp
+  #include <iostream>
+  #include <string>
+  #include <vector>
+  #include <queue>
+  #include <algorithm>
+  #include <cstring>
+  
+  using namespace std;
+  
+  int n;
+  int dir[4][2] = { {-1,0},{1,0}, {0,-1}, {0,1} };
+  int map[501][501];
+  
+  struct Loc {
+  	int x, y, cnt;
+  	Loc(int sx, int sy, int count) {
+  		x = sx;
+  		y = sy;
+  		cnt = count;
+  	}
+  };
+  
+  int bfs(int sX, int sY) {
+  	queue<Loc> q;
+  	q.push({ sX, sY ,1});
+  	vector<vector<bool>> ch(n, vector<bool>(n, false));
+  	ch[sX][sY] = true;
+  	int k = 1;
+  	while (!q.empty()) {
+  		int x = q.front().x;
+  		int y = q.front().y;
+  		int cnt = q.front().cnt;
+  		if (k < cnt) k = cnt;
+  		q.pop();
+  
+  		for (int i = 0; i < 4; i++) {
+  			int nx = x + dir[i][0];
+  			int ny = y + dir[i][1];
+  			if (nx < 0 || ny<0 || nx >= n || ny >= n || ch[nx][ny] || map[x][y]>map[nx][ny]) continue;
+  			q.push(Loc( nx,ny,cnt+1));
+  			ch[nx][ny] = true;
+  		}
+  	}
+  
+  	return k;
+  }
+  
+  int main() {
+  	ios_base::sync_with_stdio(false);
+  	cin.tie(NULL);
+  	cin >> n;
+  	for (int i = 0; i < n; i++) {
+  		for (int j = 0; j < n; j++) {
+  			cin >> map[i][j];
+  		}
+  	}
+  	int res = 0;
+  
+  	for (int i = 0; i < n; i++) {
+  		for (int j = 0; j < n; j++) {
+  			res = max(bfs(i, j),res);
+  		}
+  	}
+  
+  	cout << res << "\\n";
+  	
+  	return 0;
+  }
+  ```
+
+- 메모제이션 이용
+
+  ```cpp
+  #include <iostream>
+  #include <string>
+  #include <vector>
+  #include <queue>
+  #include <algorithm>
+  #include <cstring>
+  
+  using namespace std;
+  
+  int n;
+  int dir[4][2] = { {-1,0},{1,0}, {0,-1}, {0,1} };
+  int map[501][501];
+  int dy[501][501];
+  
+  int dfs(int x, int y) {
+  	if (dy[x][y]) return dy[x][y];
+  	dy[x][y] = 1;
+  	for (int i = 0; i < 4; i++) {
+  		int nx = x + dir[i][0];
+  		int ny = y + dir[i][1];
+  		if (nx < 0 || ny<0 || nx >= n || ny >= n ||  map[x][y]>=map[nx][ny]) continue;
+  		dy[x][y] = max(dfs(nx,ny)+1, dy[x][y]);
+  	}
+  	return dy[x][y];
+  }
+  
+  int main() {
+  	ios_base::sync_with_stdio(false);
+  	cin.tie(NULL);
+  	cin >> n;
+  	for (int i = 0; i < n; i++) {
+  		for (int j = 0; j < n; j++) {
+  			cin >> map[i][j];
+  		}
+  	}
+  	int res = 0;
+  
+  	for (int i = 0; i < n; i++) {
+  		for (int j = 0; j < n; j++) {
+  			res = max(dfs(i, j),res);
+  		}
+  	}
+  
+  	cout << res << "\\n";
+  	
+  	return 0;
+  }
+  ```
+
+
+
+답 보고 메모제이션 생각났다..
